# TRAiL

./: README.md  app.js  settings.js
GUI/: README.md  app.js  package.json
GUI/public/: graphic.html  home.html  statistic.html
GUI/public/css/: client.css  common.css  graph.css  home.css
GUI/public/js/: BarController.js  BarGraph.js  BoxGraph.js  LineGraph.js  Matrix.js  PageGraphic.js  PageStatistic.js  client.js  common.js  dialog.js  graph.js  graphic.js  home.js  statistic.js  struct.js
pmotfcsv/: Makefile.in  README.md  config.h  config.h.in  configure  configure.ac
pmotfcsv/src/: Makefile.am  Makefile.in  PerfOtfReader.cpp  PerfOtfReader.h  PerfOtfWriter.cpp  PerfOtfWriter.h  main.cpp
public/: graphic.html  statistic.html
public/js/: BarController.js  Histogram.js  Matrix.js  PageStatistic.js  client.js  struct.js
